--- a/translations/kangyur/translations/093-019_toh704,912-the_dharani_of_simhanada.xml
+++ b/translations/kangyur/translations/093-019_toh704,912-the_dharani_of_simhanada.xml
@@ -20,7 +20,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-093-019-41">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -163,6 +163,9 @@
                 </change>
                 <change who="#andre" when="2024-11-02T01:38:08.797Z" type="text-version" status="1.0.1" xml:id="UT22084-093-019-126">
                     <desc>Glossary integration revised, activated in CG</desc>
+                </change>
+                <change who="#andre" when="2024-11-29T17:57:19.374Z" type="text-version" status="1.0.2" xml:id="UT22084-093-019-127">
+                    <desc>Update to the glossary</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -527,7 +530,7 @@
                         Willis, 8–28. London: The British Museum, 2021.</bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded" xml:id="UT22084-093-019-glossary">
+            <div type="glossary" xml:id="UT22084-093-019-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-093-019-97">
