--- a/translations/kangyur/placeholders/035-019_toh44-19-chapter_19_the_verses_of_the_assembly_of_bodhisattvas.xml
+++ b/translations/kangyur/placeholders/035-019_toh44-19-chapter_19_the_verses_of_the_assembly_of_bodhisattvas.xml
@@ -10,13 +10,14 @@
                 <author role="translatorMain" xml:id="UT22084-035-019-5">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-035-019-6">Ana Cristina Lopes</author>
                 <editor role="projectEditor" xml:id="UT22084-035-019-14">Nathaniel Rich</editor>
+                <editor role="copyEditor" xml:id="UT22084-035-019-23">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-035-019"/>
             </publicationStmt>
             <sourceDesc>
@@ -72,6 +73,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-11-18T11:02:15.749Z" type="text-version" status="0.0.9" xml:id="UT22084-035-019-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-18T11:04:49.697Z" type="text-version" status="0.0.10" xml:id="UT22084-035-019-24">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-02T10:45:35.365Z" type="translation-status" status="2.d" xml:id="UT22084-035-019-25">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-02T10:45:35.365Z" type="text-version" status="0.0.11" xml:id="UT22084-035-019-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
