--- a/translations/kangyur/translations/091-039_toh642-one_hundred_and_eight_names_of_manjusri.xml
+++ b/translations/kangyur/translations/091-039_toh642-one_hundred_and_eight_names_of_manjusri.xml
@@ -24,7 +24,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-039-226">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2024</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -164,6 +164,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-10-14T17:44:46.055Z" type="text-version" status="1.0.3" xml:id="UT22084-091-039-234">
                     <desc>updated Dharmacakra to Dharmachakra with respect to the translation group.</desc>
+                </change>
+                <change who="#andre" when="2024-12-02T12:50:38.247Z" type="text-version" status="1.0.4" xml:id="UT22084-091-039-235">
+                    <desc>Glossary integration revised, activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -642,7 +645,7 @@
                             Buddhica</title> 15, no. 2020 (1913): 85–104.</bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded" xml:id="UT22084-091-039-glossary">
+            <div type="glossary" xml:id="UT22084-091-039-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-091-039-171">
