--- a/translations/kangyur/placeholders/079-015_toh388-the_tantra_of_body_speech_and_mind.xml
+++ b/translations/kangyur/placeholders/079-015_toh388-the_tantra_of_body_speech_and_mind.xml
@@ -10,8 +10,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal sku gsung thugs kyi rgyud kyi rgyal po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Śrīkāyavākcittatantrarāja</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="4"/>
                 <idno xml:id="UT22084-079-015"/>
             </publicationStmt>
             <sourceDesc>
@@ -30,6 +34,12 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-079-015-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-02T13:08:04.518Z" type="translation-status" status="4" xml:id="UT22084-079-015-2">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-02T13:08:04.518Z" type="text-version" status="0.0.1" xml:id="UT22084-079-015-3">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
