--- a/translations/kangyur/translations/091-036_toh639,879-one-hundred_and_eight_names_of_youthful_manjushri_accompanied_by_his_dharani.xml
+++ b/translations/kangyur/translations/091-036_toh639,879-one-hundred_and_eight_names_of_youthful_manjushri_accompanied_by_his_dharani.xml
@@ -26,7 +26,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-036-364">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.6 <date>2024</date>
+                <edition>v 1.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -175,6 +175,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-10-14T17:43:16.386Z" type="text-version" status="1.0.6" xml:id="UT22084-091-036-374">
                     <desc>updated Dharmacakra to Dharmachakra with respect to the translation group.</desc>
+                </change>
+                <change who="#andre" when="2024-12-02T13:13:09.1Z" type="text-version" status="1.0.7" xml:id="UT22084-091-036-375">
+                    <desc>Glossary integration revised, activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
