--- a/translations/kangyur/placeholders/093-032_toh717,1048-the_incantation_for_not_forgetting.xml
+++ b/translations/kangyur/placeholders/093-032_toh717,1048-the_incantation_for_not_forgetting.xml
@@ -11,11 +11,11 @@
                 <author role="translatorEng" xml:id="UT22084-093-032-5">Paul G. Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-093-032"/>
             </publicationStmt>
             <sourceDesc>
@@ -55,6 +55,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-05T17:58:26.547Z" type="text-version" status="0.0.3" xml:id="UT22084-093-032-7">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-02T13:56:09.812Z" type="translation-status" status="2.h" xml:id="UT22084-093-032-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-02T13:56:09.812Z" type="text-version" status="0.0.4" xml:id="UT22084-093-032-9">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
