--- a/translations/kangyur/placeholders/093-033_toh718,1037-the_incantation_for_developing_insight.xml
+++ b/translations/kangyur/placeholders/093-033_toh718,1037-the_incantation_for_developing_insight.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-093-033-5">Paul G. Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-093-033"/>
             </publicationStmt>
             <sourceDesc>
@@ -59,6 +59,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-05T05:33:03.088Z" type="text-version" status="0.0.3" xml:id="UT22084-093-033-7">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-02T13:57:09.87Z" type="translation-status" status="2.h" xml:id="UT22084-093-033-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-02T13:57:09.87Z" type="text-version" status="0.0.4" xml:id="UT22084-093-033-9">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
