--- a/translations/kangyur/placeholders/094-021_toh744-the_tantra_of_vajrapatala.xml
+++ b/translations/kangyur/placeholders/094-021_toh744-the_tantra_of_vajrapatala.xml
@@ -16,11 +16,11 @@
                 <author role="translatorEng" xml:id="UT22084-094-021-14">Paul G. Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-094-021"/>
             </publicationStmt>
             <sourceDesc>
@@ -36,7 +36,6 @@
             </sourceDesc>
             <notesStmt/>
             <revisionDesc>
-            
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-094-021-1">
                     <desc>TEI migrated to 2.19.0</desc>
                 </change>
@@ -72,6 +71,12 @@
                 </change>
                 <change who="#john" when="2024-10-15T09:50:26.855Z" type="text-version" status="0.0.6" xml:id="UT22084-094-021-16">
                     <desc>Merged Toh 744a, which is part of the same text, into this TEI file.</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-02T14:00:49.797Z" type="translation-status" status="2.h" xml:id="UT22084-094-021-17">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-02T14:00:49.797Z" type="text-version" status="0.0.7" xml:id="UT22084-094-021-18">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
